<resources>
    <string name="app_name">Booking Futsal</string>
    <string name="image">image</string>
    <string name="rayhan_abyansyah">Rayhan Abyansyah</string>
    <string name="nama">nama</string>
    <string name="no_hp">no_hp</string>
    <string name="_0895416005459">_0895416005459</string>
    <string name="home">home</string>
    <string name="my_profil">My Profil</string>
</resources>
